--- a/soul-admin/src/main/resources/application-local.yml
+++ b/soul-admin/src/main/resources/application-local.yml
@@ -3,18 +3,18 @@ server:
   address: 0.0.0.0
 
 spring:
-   thymeleaf:
-       cache: true
-       encoding: utf-8
-       enabled: true
-       prefix: classpath:/static/
-       suffix: .html
-   datasource:
-     url: jdbc:mysql://192.168.1.82:3306/soul?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&failOverReadOnly=false&autoReconnect=true
-     username: root
-     password: 123456
-     dbcp2:
-       driver-class-name: com.mysql.jdbc.Driver
+  thymeleaf:
+    cache: true
+    encoding: utf-8
+    enabled: true
+    prefix: classpath:/static/
+    suffix: .html
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/soul?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&failOverReadOnly=false&autoReconnect=true
+    username: root
+    password: 123456
+    dbcp2:
+      driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
   config-location: classpath:/mybatis/mybatis-config.xml
@@ -22,20 +22,20 @@ mybatis:
 
 soul:
   sync:
-      strategy: http
-#      zookeeper:
-#        url: localhost:2181
-#        sessionTimeout: 5000
-#        connectionTimeout: 2000
+    strategy: http
+    zookeeper:
+      url: localhost:2181
+      sessionTimeout: 5000
+      connectionTimeout: 2000
 
 
 logging:
-    level:
-        root: info
-        org.springframework.boot: info
-        org.apache.ibatis: info
-        org.dromara.soul.bonuspoint: info
-        org.dromara.soul.lottery: debug
-        org.dromara.soul: debug
+  level:
+    root: info
+    org.springframework.boot: info
+    org.apache.ibatis: info
+    org.dromara.soul.bonuspoint: info
+    org.dromara.soul.lottery: debug
+    org.dromara.soul: debug
 
-    path: "./logs/soul-admin"
+  path: "./logs/soul-admin"
