--- a/soul-bootstrap/src/main/resources/application-local.yml
+++ b/soul-bootstrap/src/main/resources/application-local.yml
@@ -19,17 +19,17 @@ soul :
 
     bufferSize: 4096
     timeVerify:
-      timeDelay: 10
+      timeDelay : 10
       enabled: false
 
     sync:
-#        strategy: http
+        strategy: zookeeper
 #        websocket :
 #             url: ws://localhost:8887/websocket
-#        zookeeper:
-#             url: localhost:2181
-#             sessionTimeout: 5000
-#             connectionTimeout: 2000
+        zookeeper:
+             url: localhost:2181
+             sessionTimeout: 5000
+             connectionTimeout: 2000
         http:
              url : http://localhost:8888
 
